--- a/project.html
+++ b/project.html
@@ -10,7 +10,8 @@
     <title>Hypekingfish</title>
     <link href="style.css" rel="stylesheet" />
     <link href="css/Footer.css" rel="stylesheet" />
-    <link href="css/Nav.css" rel="stylesheet" />
+    <link href="css/Nav.css" rel="stylesheet" />\
+    <link href="css/Visitors.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
     <script
       src="https://kit.fontawesome.com/f78443c527.js"
@@ -134,5 +135,6 @@
     </footer>
     <script src="scripts/countdown.js"></script>
     <script src="scripts/navmenu.js"></script>
+    <script src="scripts/visitorCount.js"></script>
   </body>
 </html>
