--- a/sb-extension's.html
+++ b/sb-extension's.html
@@ -8,10 +8,13 @@
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet">
+        <link href="css/Footer.css" rel="stylesheet"/>
+        <link href="css/Nav.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
-    <body class="container">
+    <body>
         <div class="topnav">
         <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
         <div id="myLinks">
@@ -24,70 +27,78 @@
             <i class="fa fa-bars"></i>
         </a>
         </div>
-        <main>
-            <section>
-                <h2>Streamer Bot Extensions</h2>
-            </section>
-
-            <section class="extension-grid">
-                <div class="extension-item">
-                    <a href="aviation-trivia.html" class="extension-button">
-                        <i class="fas fa-play-circle"></i>
-                        Aviation Trivia
-                    </a>
-                    <p>An aviation related trivia game for Twitch chat.</p>
+        <div class="sb-extensions">
+        </div>
+        <footer class="site-footer">
+            <div class="footer-content">
+                <div class="footer-branding">
+                <img
+                    src="img/Progress_Pride_Flag.png"
+                    alt="Progress Pride Flag"
+                    class="footer-flag"
+                />
+                <span class="footer-title"
+                    >Created with passion by <strong>Hypekingfish</strong></span
+                >
+                <img
+                    src="img/Progress_Pride_Flag.png"
+                    alt="Progress Pride Flag"
+                    class="footer-flag"
+                />
                 </div>
-                <div class="extension-item">
-                    <a href="metar-fetcher.html" class="extension-button">
-                        <i class="fas fa-cloud"></i>
-                        Metar Fetcher
-                    </a>
-                    <p>Fetches live METAR data for selected airports from user input.</p>
+                <div class="footer-social">
+                <a
+                    href="https://github.com/[your-actual-username]"
+                    aria-label="GitHub"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <i class="fab fa-github"></i>
+                </a>
+                <a
+                    href="https://twitter.com/fishnbuckjr02"
+                    aria-label="Twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <i class="fab fa-x-twitter"></i>
+                </a>
+                <a
+                    href="https://youtube.com/yourchannel"
+                    aria-label="YouTube"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a
+                    href="https://twitch.tv/hypekingfish"
+                    aria-label="Twitch"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <i class="fab fa-twitch"></i>
+                </a>
+                <a
+                    href="https://discord.gg/yourdiscord"
+                    aria-label="Discord"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <i class="fab fa-discord"></i>
+                </a>
                 </div>
-            </section>
-
-            <section class="social-links">
-                <div class="social-links">
-                    <a href="https://bsky.app/profile/hypekingfish.bsky.social" class="social-button" aria-label="Bluesky" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-bluesky"></i>
-                    </a>
-                    <a href="https://discord.gg/AxeJ6ryn2x" class="social-button" aria-label="Discord" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-discord"></i>
-                    </a>
-                    <a href="https://github.com/Hypekingfish" class="social-button" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a href="https://www.instagram.com/yourprofile" class="social-button" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="https://ko-fi.com/yourkofi" class="social-button" aria-label="Ko-fi" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-solid fa-mug-hot"></i>
-                    </a>
-                    <a href="https://paypal.me/yourlink" class="social-button" aria-label="PayPal" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-paypal"></i>
-                    </a>
-                    <a href="https://steamcommunity.com/id/yourprofile" class="social-button" aria-label="Steam" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-steam"></i>
-                    </a>
-                    <a href="https://tiktok.com/@yourusername" class="social-button" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
-                    <a href="https://twitch.tv/hypekingfish" class="social-button" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-twitch"></i>
-                    </a>
-                    <a href="https://twitter.com/fishnbuckjr02" class="social-button" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://www.youtube.com/@yourchannel" class="social-button" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                </div>        
-            </section>
-        </main>
-
-        <footer>
-            <p><img src="/img/Progress_Pride_Flag.png" alt="Pride Flag"> Made with passion by Hypekingfish <img src="/img/Progress_Pride_Flag.png" alt="Pride Flag"></p>
-            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
-        </footer>
+                <p class="footer-copyright">
+                <small>
+                    &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br />
+                    All content is property of Hypekingfish unless otherwise noted.
+                </small>
+                </p>
+            </div>
+            <script>
+            document.getElementById("year").textContent = new Date().getFullYear();
+            </script>
+            </footer>
+        <script src="scripts/navmenu.js"></script>
     </body>
 </html>
